Now can see the blog entries and add entries.

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,7 +4,7 @@
     <p>Welcome to <%= title %></p>
     <h2>Blog Posts Go Here</h2>
     <% for(var i=0; i < blogPosts.length; i++) { %>   
-    <article><h2><a href="<%= blogPosts[i].linkName %>"><%= blogPosts[i].title %></h2></a></article>
+    <article><h2><a href="/post/<%= blogPosts[i].linkName %>"><%= blogPosts[i].title %></h2></a></article>
     <% } %>
   
 </main>
