--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -16,6 +16,7 @@
 
 <body>
     <nav>
+        <img src="/images/dog3.png">
         <ul>
             <li><a href="/">Home</a></li>
             <li><a href="/about">About</a></li>
